--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-size: 1em;
-  line-height: 150%;
+  line-height: 140%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -25,6 +25,10 @@ footer {
 .github-link {
   margin-right: 20px;
   float: right;
+}
+
+h1 {
+  margin-bottom: 12px;
 }
 
 h1, h2 {
